# PD_REST_API_contacts

./: .env.example  .gitignore  Dockerfile  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py
app/: auth.py  crud.py  database.py  email.py  main.py  models.py  schemas.py
app/templates/: email_template.html  reset_pass_email.html  reset_pass_form.html
docs/: conf.py  index.rst  templates.rst  utilities.rst
docs/_build/doctrees/: api_models_documentation.doctree  environment.pickle  functionality.doctree  index.doctree  installation.doctree  models.doctree  schemas.doctree  templates.doctree  utilities.doctree
docs/_build/html/: .buildinfo  api_models_documentation.html  functionality.html  genindex.html  index.html  installation.html  models.html  objects.inv  schemas.html  search.html  searchindex.js  templates.html  utilities.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/app/: auth.html  crud.html  database.html  email.html  main.html  models.html  schemas.html
docs/_build/html/_modules/utils/: create_tables.html
docs/_build/html/_sources/: api_models_documentation.rst.txt  functionality.rst.txt  installation.rst.txt  models.rst.txt  schemas.rst.txt
migrations/: env.py
migrations/versions/: 23c2ce0313f4_add_is_verified_field_to_user_model.py  253bc486de70_initial_migration.py  e42f678cfd04_initial_migration.py  f02caee9c2f5_initial_migration.py
postgres-data/: postmaster 2.pid  postmaster.pid
postgres-data/base/13481/: pg_internal 3.init  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16398  16399  16401  16402  16403  16405  16411  16412  16419  16420  16421  16422  2224  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+10 more)
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
tests/: conftest.py  test_auth.py  test_crud.py  test_email.py  test_main.py  test_pytest_auth.py
utils/: CORS_test_page.html  create_tables.py  token_test.py
