[tool.poetry]
name = "pd-rest-api-contacts"
version = "0.1.0"
description = ""
authors = ["pavlodubovyi <133531274+pavlodubovyi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
databases = "^0.9.0"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
jose = "^1.0.0"
fastapi-jwt-auth = "^0.5.0"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
